# xdag-plus

./: .gitignore  Cargo.toml  README.md  rpc.md
.github/workflows/: release-macos.yml
app/: Cargo.toml  build.rs
app/src/: lib.rs  winit_helper.rs
app/ui/: app.slint  global.slint  i18n.slint
app/ui/assets/: icon.icns
app/ui/components/: about-slint.slint  add-contact.slint  del-contact.slint  del-wallet.slint  index.slint  modify-pswd.slint  qrcode.slint  rename.slint  security.slint  send.slint  transaction.slint  xtext-edit.slint
app/ui/modules/surrealism-ui/: index.slint  surrealism-ui.toml  x_index.slint
app/ui/modules/surrealism-ui/src/card/: card.slint
app/ui/modules/surrealism-ui/src/icon/: icon.slint
app/ui/modules/surrealism-ui/src/x_button/: index.slint  x_button.slint
app/ui/modules/surrealism-ui/src/x_card/: index.slint  x_card.slint
app/ui/modules/surrealism-ui/themes/: index.slint
app/ui/modules/surrealism-ui/themes/src/: divider.slint  theme.slint
app/ui/modules/surrealism-ui/use/: index.slint
app/ui/modules/surrealism-ui/use/src/: fn.slint
app/ui/views/: account.slint  entry.slint  index.slint  password.slint  pswdinput.slint
bip32/: Cargo.toml
bip32/src/mnemonic/: bits.rs  phrase.rs
bip32/tests/: bip39_vectors.rs
config/: Cargo.toml
config/src/: lib.rs
crypto/: Cargo.toml
crypto/src/: lib.rs
rpc/: Cargo.toml
rpc/src/: explorer.rs  lib.rs  node.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs
wallet/: Cargo.toml
wallet/src/: bip44.rs  lib.rs  wallet.rs
xdag-wallet/: Cargo.toml  build.rs
xdag-wallet/src/: config.rs  error.rs  lib.rs  main.rs
xdag-wallet/src/crypto/: aes.rs  hash.rs
xdag-wallet/src/rpc/: node.rs
xdag-wallet/src/xdag_wallet/: mod.rs  wallet.rs
xdag-wallet/ui/: app.slint  global.slint  i18n.slint
xdag-wallet/ui/components/: create-wallet.slint  del-wallet.slint  error.slint  import.slint  index.slint  mnemonic.slint  security.slint  select-lang.slint  select-net.slint  transaction.slint  xline-edit.slint
xdag-wallet/ui/modules/surrealism-ui/: x_index.slint
xdag-wallet/ui/modules/surrealism-ui/src/badge/: badge.slint
xdag-wallet/ui/modules/surrealism-ui/src/dialog/: dialog.slint
xdag-wallet/ui/modules/surrealism-ui/src/x_alert/: index.slint  x_alert.slint
xdag-wallet/ui/modules/surrealism-ui/src/x_button/: x_button.slint
xdag-wallet/ui/modules/surrealism-ui/src/x_card/: x_card.slint
xdag-wallet/ui/modules/surrealism-ui/src/x_checkbox/: index.slint  x_checkbox.slint
xdag-wallet/ui/modules/surrealism-ui/src/x_input/: index.slint  x_input.slint
xdag-wallet/ui/modules/surrealism-ui/src/x_menu/: index.slint  x_menu.slint
xdag-wallet/ui/modules/surrealism-ui/src/x_radio/: index.slint  x_radio.slint
xdag-wallet/ui/modules/surrealism-ui/themes/src/: theme.slint
xdag-wallet/ui/views/: account.slint  entry.slint  index.slint
xerror/: Cargo.toml
xerror/src/: lib.rs
