[workspace]
resolver = "2"
members = ["bip32", "xdag-wallet"]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "fat"           # Enable the most aggressive Link Time Optimization
codegen-units = 1     # Reduce the number of code generation units, increasing optimization time but improving performance
panic = "abort"
