[package]
name = "xdag-plus"
version = "0.1.5"
edition = "2021"
authors = ["swordlet <swordlet@qq.com>"]
build = "build.rs"
description = "a xdag cross-platform gui wallet powered by rust lang and slint-ui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "./src/main.rs"
name = "xdag-plus"

[lib]
path = "./src/lib.rs"
crate-type = ["lib", "cdylib"]
name = "xdagplus_lib"

[dependencies]
slint = { version = "1.10.0", features = [
    "backend-winit",
    "renderer-femtovg",
    "compat-1-2",
], default-features = false }
rayon = "1.10.0"
i-slint-backend-winit = { version = "1.10.0", features = ["renderer-femtovg"] }
winit = "0.30.9"

bip32 = { path = "../bip32" }
xerror = { path = "../xerror" }
rpc = { path = "../rpc" }
crypto = { path = "../crypto" }
wallet = { path = "../wallet" }
config = { path = "../config" }

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "json",
    "env-filter",
    "fmt",
    "time",
    "local-time",
] }
time = "0.3.37"
tracing-appender = "0.2.3"

anyhow = "1.0.95"
hex = "0.4.3"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
directories = "6.0"
qrcode = "0.14.1"
open = "=5.3.2"

[build-dependencies]
slint-build = "1.10.0"
winres = "0.1.12"
