[package]
name = "crypto"
version = "0.1.5"
edition = "2021"
authors = ["swordlet <swordlet@qq.com>"]
description = "xdag cross-platform gui wallet crypto"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "./src/lib.rs"
crate-type = ["lib", "cdylib"]
name = "crypto"

[dependencies]
ripemd = "0.1.3"
sha2 = "0.10.8"
aes = "0.8.4"
cbc = "0.1.2"
